--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^5.2.3",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "valid-url": "^1.0.9"
   },
   "repository": {
     "type": "git",
