--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
     "multer": "^1.4.2",
+    "simple-git": "^1.130.0",
     "valid-url": "^1.0.9"
   },
   "repository": {
