--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "doteos-back",
   "version": "0.0.1",
   "description": "A back-end project that manages the Doteos Artist Showcase.",
-  "main": "src/server.js",
+  "main": "src/server.ts",
   "scripts": {
     "test": "echo \"Hi, welcome!\" && exit 0",
-    "start": "nodemon src/server.js"
+    "start": "nodemon src/server.ts"
   },
   "dependencies": {
     "babel-eslint": "^10.0.3",
@@ -35,5 +35,10 @@
   "bugs": {
     "url": "https://github.com/adindotdev/doteos-artist-showcase-back-end/issues"
   },
-  "homepage": "https://adin.dev"
+  "homepage": "https://adin.dev",
+  "devDependencies": {
+    "@types/express": "^4.17.3",
+    "@types/multer": "^1.4.2",
+    "@types/valid-url": "^1.0.2"
+  }
 }
