--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
+    "joi": "^14.3.1",
     "mongoose": "^5.2.3",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
@@ -38,6 +39,7 @@
   "homepage": "https://adin.dev",
   "devDependencies": {
     "@types/express": "^4.17.3",
+    "@types/joi": "^14.3.4",
     "@types/multer": "^1.4.2",
     "@types/valid-url": "^1.0.2"
   }
