--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "express": "^4.16.3",
+    "express-formidable": "^1.2.0",
     "helmet": "^3.12.1",
     "joi": "^14.3.1",
     "mocha": "^7.1.1",
@@ -32,6 +33,7 @@
     "morgan": "^1.9.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.2",
+    "secure-password": "latest",
     "simple-git": "^1.130.0",
     "supertest": "^4.0.2",
     "ts-node": "^8.8.1",
@@ -50,8 +52,10 @@
   "homepage": "https://adin.dev",
   "devDependencies": {
     "@types/express": "^4.17.3",
+    "@types/express-formidable": "^1.0.4",
     "@types/joi": "^14.3.4",
     "@types/multer": "^1.4.2",
+    "@types/secure-password": "^3.1.0",
     "@types/valid-url": "^1.0.2"
   }
 }
