--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "express": "^4.16.3",
     "helmet": "^3.12.1",
-    "joi": "^14.3.1",
+    "joi": "^17.2.0",
     "mocha": "^7.1.1",
     "mongoose": "^5.2.3",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.9.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.2",
-    "secure-password": "latest",
+    "secure-password": "^4.0.0",
     "simple-git": "^1.130.0",
     "supertest": "^4.0.2",
     "ts-node": "^8.8.1",
